# lz77

./: Cargo.toml  README.md
src/: decompress.rs  lib.rs
tests/data/: 000.compressed  000.decompressed
